# irc-bridge

./: .gitignore  Cargo.toml
src/: configuration.rs  discord_side.rs  irc_bot.rs  irc_error.rs  irc_side.rs  lib.rs  main.rs  types.rs
